// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

import "google/protobuf/timestamp.proto";
import "google/type/date.proto";
import "google/type/datetime.proto";
import "google/type/dayofweek.proto";
import "wfa/measurement/internal/reporting/v2/report.proto";
import "wfa/measurement/internal/reporting/v2/report_schedule_iteration.proto";

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;

// Proto representation of the internal ReportSchedule entity type.
message ReportSchedule {
  // `MeasurementConsumer` ID from the CMMS public API.
  string cmms_measurement_consumer_id = 1;
  string external_report_schedule_id = 2;

  message Frequency {
    message Daily {}

    message Weekly {
      google.type.DayOfWeek day_of_week = 1;
    }

    message Monthly {
      int32 day_of_month = 1;
    }

    oneof frequency {
      Daily daily = 1;
      Weekly weekly = 2;
      Monthly monthly = 3;
    }
  }

  message ReportWindow {
    message TrailingWindow {
      int32 count = 1;

      enum Increment {
        INCREMENT_UNSPECIFIED = 0;
        DAY = 1;
        WEEK = 2;
        MONTH = 3;
      }
      Increment increment = 2;
    }

    oneof window {
      TrailingWindow trailing_window = 1;
      google.type.Date fixed_window = 2;
    }
  }

  enum State {
    STATE_UNSPECIFIED = 0;
    ACTIVE = 1;
    STOPPED = 2;
  }
  State state = 3;

  message Details {
    string display_name = 1;
    string description = 2;
    Report report_template = 3;
    google.type.DateTime event_start = 4;
    google.type.Date event_end = 5;
    Frequency frequency = 6;
    ReportWindow report_window = 7;
  }
  Details details = 4;

  google.protobuf.Timestamp next_report_creation_time = 5;

  ReportScheduleIteration latest_iteration = 6;

  google.protobuf.Timestamp create_time = 7;
  google.protobuf.Timestamp update_time = 8;
}
