// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/internal/reporting/v2/report_schedule.proto";

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;

// Internal service for persistence of ReportSchedule entities.
service ReportSchedules {
  rpc CreateReportSchedule(CreateReportScheduleRequest)
      returns (ReportSchedule);

  rpc GetReportSchedule(GetReportScheduleRequest) returns (ReportSchedule);

  rpc ListReportSchedules(ListReportSchedulesRequest)
      returns (ListReportSchedulesResponse);

  rpc StopReportSchedule(StopReportScheduleRequest) returns (ReportSchedule);
}

message CreateReportScheduleRequest {
  ReportSchedule report_schedule = 1;
  string external_report_schedule_id = 2;
  string request_id = 3;
}

message GetReportScheduleRequest {
  // `MeasurementConsumer` ID from the CMMS public API.
  string cmms_measurement_consumer_id = 1;
  string external_report_schedule_id = 2;
}

message ListReportSchedulesRequest {
  message Filter {
    // `MeasurementConsumer` ID from the CMMS public API. Required.
    string cmms_measurement_consumer_id = 1;
    // Skips to results with an external id greater than this.
    string external_report_schedule_id_after = 2;
  }
  Filter filter = 1;

  int32 limit = 2;
}

message ListReportSchedulesResponse {
  repeated ReportSchedule report_schedules = 1;
}

message StopReportScheduleRequest {
  // `MeasurementConsumer` ID from the CMMS public API.
  string cmms_measurement_consumer_id = 1;
  string external_report_schedule_id = 2;
}
